name:                easy-frp
version:             0.1.0.0
synopsis:            lightweight FRP (functional reactive programming) library
-- description:         
homepage:            https://github.com/kelemzol/easy-frp
-- license:             
-- license-file:        LICENSE
author:              Zoltán Kelemen
maintainer:          kelemzol@elte.hu
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Control.EasyFRP

  other-modules:       Control.EasyFRP.Core
                     , Control.EasyFRP.Combinators
                     , Control.EasyFRP.Generators
                     , Control.EasyFRP.Examples

  build-depends:       base >=4.8 && <4.9
                     , ghc >=7.10 && <7.11
                     , mtl >=2.2 && <2.3


  default-language:  Haskell2010